Change the main menu